--- a/AWSwiftMovieSearch/Base.lproj/Main.storyboard
+++ b/AWSwiftMovieSearch/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,88 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="AWSwiftMovieSearch" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zIB-Ik-1QF">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieCell" rowHeight="132" id="0tK-dO-W8s">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="132"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0tK-dO-W8s" id="y6G-P0-LkG">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="132"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8Zv-1v-Qjg">
+                                                    <rect key="frame" x="0.0" y="2" width="95" height="128"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="128" id="5io-Z7-kyx"/>
+                                                        <constraint firstAttribute="width" constant="95" id="TAL-PH-emL"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="dzF-5h-fSB">
+                                                    <rect key="frame" x="100" y="25" width="309" height="105"/>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
+                                                    <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                </textView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cia-YT-VIL">
+                                                    <rect key="frame" x="110" y="2" width="83.5" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2002" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cOQ-Em-J62">
+                                                    <rect key="frame" x="218.5" y="5" width="40" height="15"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="40" id="oU3-ju-VIe"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="dzF-5h-fSB" firstAttribute="top" secondItem="cOQ-Em-J62" secondAttribute="bottom" constant="5" id="32p-0Z-wiQ"/>
+                                                <constraint firstItem="cOQ-Em-J62" firstAttribute="top" secondItem="y6G-P0-LkG" secondAttribute="top" constant="5" id="35z-h4-Eph"/>
+                                                <constraint firstAttribute="trailing" secondItem="dzF-5h-fSB" secondAttribute="trailing" constant="5" id="A6W-lF-1LQ"/>
+                                                <constraint firstItem="Cia-YT-VIL" firstAttribute="top" secondItem="y6G-P0-LkG" secondAttribute="top" constant="2" id="Ilw-tX-sqj"/>
+                                                <constraint firstItem="8Zv-1v-Qjg" firstAttribute="top" secondItem="y6G-P0-LkG" secondAttribute="top" constant="2" id="J2z-KC-n1b"/>
+                                                <constraint firstItem="dzF-5h-fSB" firstAttribute="leading" secondItem="8Zv-1v-Qjg" secondAttribute="trailing" constant="5" id="Qtl-Nb-fUF"/>
+                                                <constraint firstItem="dzF-5h-fSB" firstAttribute="top" secondItem="Cia-YT-VIL" secondAttribute="bottom" constant="2" id="d0N-vB-yGt"/>
+                                                <constraint firstItem="cOQ-Em-J62" firstAttribute="leading" secondItem="Cia-YT-VIL" secondAttribute="trailing" constant="25" id="pcM-7a-JSE"/>
+                                                <constraint firstAttribute="bottom" secondItem="dzF-5h-fSB" secondAttribute="bottom" constant="2" id="qlb-Ey-zKA"/>
+                                                <constraint firstItem="Cia-YT-VIL" firstAttribute="leading" secondItem="8Zv-1v-Qjg" secondAttribute="trailing" constant="15" id="rIW-f8-VNo"/>
+                                                <constraint firstAttribute="bottom" secondItem="8Zv-1v-Qjg" secondAttribute="bottom" constant="2" id="vSP-Th-fdT"/>
+                                                <constraint firstItem="8Zv-1v-Qjg" firstAttribute="leading" secondItem="y6G-P0-LkG" secondAttribute="leading" id="yvj-sU-WEY"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="zIB-Ik-1QF" secondAttribute="bottom" id="P4h-0e-jOk"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="zIB-Ik-1QF" secondAttribute="trailing" id="mEg-2T-RRB"/>
+                            <constraint firstItem="zIB-Ik-1QF" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="r6s-fK-KlZ"/>
+                            <constraint firstItem="zIB-Ik-1QF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="toj-wF-FQI"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="zIB-Ik-1QF" id="cZf-yg-EUU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="133.92857142857142"/>
         </scene>
     </scenes>
 </document>
